--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-toastify": "^10.0.5",
     "react-visibility-sensor": "^5.1.1",
     "remotion": "^4.0.228",
+    "sass": "^1.85.0",
     "sitemap": "^8.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.0.0",
